// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frame library frame 1`] = `
<li
  className="frame selected"
  key="3"
  onContextMenu={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  tabIndex={0}
>
  <FrameTitle
    frame={
      Object {
        "displayName": "updateEvents",
        "frameworkGroupingOn": false,
        "id": 3,
        "library": "backbone",
        "location": Object {
          "line": 12,
        },
        "source": Object {
          "url": "backbone.js",
        },
        "toggleFrameworkGrouping": [Function],
      }
    }
    options={
      Object {
        "shouldMapDisplayName": true,
      }
    }
  />
  <FrameLocation
    frame={
      Object {
        "displayName": "updateEvents",
        "frameworkGroupingOn": false,
        "id": 3,
        "library": "backbone",
        "location": Object {
          "line": 12,
        },
        "source": Object {
          "url": "backbone.js",
        },
        "toggleFrameworkGrouping": [Function],
      }
    }
  />
</li>
`;

exports[`Frame user frame (not selected) 1`] = `
<li
  className="frame"
  key="1"
  onContextMenu={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  tabIndex={0}
>
  <FrameTitle
    frame={
      Object {
        "displayName": "renderFoo",
        "frameworkGroupingOn": false,
        "id": 1,
        "library": false,
        "location": Object {
          "line": 10,
        },
        "source": Object {
          "isBlackBoxed": false,
          "url": "foo-view.js",
        },
        "toggleFrameworkGrouping": [Function],
      }
    }
    options={
      Object {
        "shouldMapDisplayName": true,
      }
    }
  />
  <FrameLocation
    frame={
      Object {
        "displayName": "renderFoo",
        "frameworkGroupingOn": false,
        "id": 1,
        "library": false,
        "location": Object {
          "line": 10,
        },
        "source": Object {
          "isBlackBoxed": false,
          "url": "foo-view.js",
        },
        "toggleFrameworkGrouping": [Function],
      }
    }
  />
</li>
`;

exports[`Frame user frame 1`] = `
<li
  className="frame selected"
  key="1"
  onContextMenu={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  tabIndex={0}
>
  <FrameTitle
    frame={
      Object {
        "displayName": "renderFoo",
        "frameworkGroupingOn": false,
        "id": 1,
        "library": false,
        "location": Object {
          "line": 10,
        },
        "source": Object {
          "isBlackBoxed": false,
          "url": "foo-view.js",
        },
        "toggleFrameworkGrouping": [Function],
      }
    }
    options={
      Object {
        "shouldMapDisplayName": true,
      }
    }
  />
  <FrameLocation
    frame={
      Object {
        "displayName": "renderFoo",
        "frameworkGroupingOn": false,
        "id": 1,
        "library": false,
        "location": Object {
          "line": 10,
        },
        "source": Object {
          "isBlackBoxed": false,
          "url": "foo-view.js",
        },
        "toggleFrameworkGrouping": [Function],
      }
    }
  />
</li>
`;
